--- a/freeCodeCamp/typescript-tutorial/src/components/styles.css
+++ b/freeCodeCamp/typescript-tutorial/src/components/styles.css
@@ -16,13 +16,13 @@
 }
 
 .input__box:focus {
-    box-shadow: 0 0 10px 1000px rgba (0, 0, 0, 0.5);
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.5);
     outline: none;
 }
 
 .input__submit {
     position: absolute;
-    width:50px;
+    width: 50px;
     height: 50px;
     margin: 12px;
     border-radius: 50px;
@@ -42,4 +42,64 @@
 .input__submit:active {
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
+}
+
+.todos {
+    display: flex;
+    justify-content: space-evenly;
+    width: 90%;
+    flex-wrap: wrap;
+}
+
+.todos__single {
+    display: flex;
+    width: 29.5%;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 15px;
+    background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+    /* transition: 0.2s; */
+}
+
+/* .todos__single:hover {
+    box-shadow: 0 0 5px black;
+    transform: scale(1.03);
+} */
+
+.todos__single--text {
+    flex: 1;
+    padding: 5px;
+    border: none;
+    font-size: 20px;
+}
+
+.todos__single--text:focus {
+    outline: none;
+}
+
+.icon {
+    margin-left: 10px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+    .todos__single {
+        width: 40%;
+    }
+}
+
+@media (max-width: 700px) {
+    .input {
+        width: 95%;
+    }
+
+    .todos {
+        width: 95%;
+    }
+
+    .todos__single {
+        width: 95%;
+        margin-bottom: 10px;
+    }
 }
